--- a/complete-javascript-course-master/13-Advanced-DOM-Bankist/starter/index.html
+++ b/complete-javascript-course-master/13-Advanced-DOM-Bankist/starter/index.html
@@ -21,6 +21,10 @@
           alt="Bankist logo"
           class="nav__logo"
           id="logo"
+          az="lpnam"
+          data-version-number="3.0"
+          data-set-user="lpnam"
+          sig-out-user="lpnam1"
         />
         <ul class="nav__links">
           <li class="nav__item">
